--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,6 @@ knitr::opts_chunk$set(
 
 The `AnanseSeurat` package takes pre-processed clustered single cell objects of scRNAseq and scATACseq or a multiome combination, and generates files for gene regulatory network (GRN) analysis.
 For the vignette see: http://htmlpreview.github.io/?https://github.com/JGASmits/AnanseSeurat/blob/main/inst/introduction.html
-The goal of overviewR is to make it easy to get an overview of a data set by displaying relevant sample information. At the moment, there are the following functions:
 
 
 ## Installation
@@ -45,7 +44,7 @@ https://github.com/vanheeringen-lab/anansnake
 ```{r, eval=FALSE}
 export_CPM_scANANSE(
   pbmc,
-  min_cells <- 25,
+  min_cells = 25,
   output_dir = './scANANSE/analysis',
   cluster_id = 'predicted.id',
   RNA_count_assay = 'RNA'
@@ -53,7 +52,7 @@ export_CPM_scANANSE(
 
 export_ATAC_scANANSE(
   pbmc,
-  min_cells <- 25,
+  min_cells = 25,
   output_dir = './scANANSE/analysis',
   cluster_id = 'predicted.id',
   ATAC_peak_assay = 'peaks'
@@ -67,7 +66,7 @@ contrasts <-  c('B-naive_B-memory',
 
 config_scANANSE(
   pbmc,
-  min_cells <- 25,
+  min_cells = 25,
   output_dir = './scANANSE/analysis',
   cluster_id = 'predicted.id',
   additional_contrasts = contrasts
@@ -75,7 +74,7 @@ config_scANANSE(
 
 DEGS_scANANSE(
   pbmc,
-  min_cells <- 25,
+  min_cells = 25,
   output_dir = './scANANSE/analysis',
   cluster_id = 'predicted.id',
   additional_contrasts = contrasts
