--- a/README.Rmd
+++ b/README.Rmd
@@ -17,9 +17,7 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/github/JGASmits/AnanseSeurat/branch/main/graph/badge.svg?token=0XKWAD0KJ7)](https://codecov.io/github/JGASmits/AnanseSeurat)
 <!-- badges: end -->
 
-
 The `AnanseSeurat` package takes pre-processed clustered single cell objects of scRNAseq and scATACseq or a multiome combination, and generates files for gene regulatory network (GRN) analysis.
-For the vignette see: http://htmlpreview.github.io/?https://github.com/JGASmits/AnanseSeurat/blob/main/inst/introduction.html
 
 
 ## Installation
@@ -98,12 +96,12 @@ anansnake \
 ### import ANANSE results back to your single cell object
 After runing Anansnake, you can import the TF influence scores back into your single cell object of chooiche
 ```{r eval=FALSE}
-ananse_result_list <- import_seurat_scANANSE(pbmc,
-                        cluster_id = 'predicted.id',
-                        anansnake_inf_dir= "./scANANSE/analysis/influence")
-
-pbmc <- ananse_result_list[1]
-TF_influence_scores <- ananse_result_list[2]
+pbmc <- import_seurat_scANANSE(pbmc,
+                               cluster_id = 'predicted.id',
+                               anansnake_inf_dir = "./scANANSE/analysis/influence")
+TF_influence <- per_cluster_df(pbmc,
+                               cluster_id = 'predicted.id',
+                               assay = 'influence')
 ```
 
 
